[gd_scene load_steps=7 format=3 uid="uid://scqbfaec4i5"]

[ext_resource type="Script" uid="uid://bq83ujweuwm2d" path="res://UI/game_ui.gd" id="1_p54ko"]
[ext_resource type="Texture2D" uid="uid://dg8tyfp4aea84" path="res://UI/UI_images/Empty_Infection_bar.png" id="2_h0rig"]
[ext_resource type="Texture2D" uid="uid://bht7x0ddgjfno" path="res://UI/UI_images/Filled_Infection_Bar.png" id="3_2oifk"]
[ext_resource type="Texture2D" uid="uid://50j2gplyhw8g" path="res://UI/UI_images/Consumivel_.png" id="4_fy64h"]
[ext_resource type="Texture2D" uid="uid://c2sddkj84yls0" path="res://UI/UI_images/Espaco_Arma.png" id="5_v6n52"]
[ext_resource type="Texture2D" uid="uid://h5ehwrfxkrb1" path="res://weapons/revolver_icon.png" id="6_ywmy4"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_p54ko")

[node name="timer_label" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 80.0
offset_top = 1.0
offset_right = 121.0
offset_bottom = 24.0
grow_horizontal = 2
text = "00:00
"

[node name="timer_label_text" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -76.5
offset_right = 76.5
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Tempo Sobrevivido:"

[node name="kills_label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 42.0
offset_top = 1.0
offset_right = 82.0
offset_bottom = 24.0
text = "0"
text_direction = 1

[node name="kills_label_text" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "kills:"

[node name="ammo_label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 969.0
offset_top = 531.0
offset_right = 1009.0
offset_bottom = 554.0
text = "0"

[node name="ammo_label_text" type="Label" parent="."]
offset_left = 913.0
offset_top = 529.0
offset_right = 968.0
offset_bottom = 552.0
text = "ammo:"

[node name="infection_bar" type="TextureProgressBar" parent="."]
offset_left = 1018.0
offset_top = 99.0
offset_right = 1147.0
offset_bottom = 497.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("2_h0rig")
texture_progress = ExtResource("3_2oifk")

[node name="Consumivel" type="Sprite2D" parent="."]
position = Vector2(1081.95, 574.696)
scale = Vector2(0.698198, 0.698198)
texture = ExtResource("4_fy64h")

[node name="EspacoArma" type="Sprite2D" parent="."]
position = Vector2(973.952, 593.696)
scale = Vector2(0.626984, 0.626984)
texture = ExtResource("5_v6n52")

[node name="Weapon_bar" type="TextureProgressBar" parent="EspacoArma"]
offset_left = -100.0
offset_top = -62.0
offset_right = 99.0
offset_bottom = 59.0
fill_mode = 3
nine_patch_stretch = true
stretch_margin_top = 7
stretch_margin_bottom = 8
texture_under = ExtResource("6_ywmy4")
tint_progress = Color(1, 0, 0, 1)
